# poc_svelte

code_generator/: Cargo.toml  analyzer.json
code_generator/src/: check.rs  lib.rs  mr_sailfish.rs  state_block.rs  thir.rs
code_generator/src/html/: mod.rs  utils.rs
code_generator/src/template/: closure.rs  component.rs  mod.rs  nodes.rs
code_generator/src/visitor/: ident.rs  mod.rs
code_generator/templates/: bind_input_closure.rs  callback_push.rs  closure.rs  component.rs  component_generated.rs  dom.rs  fields.rs  imports.rs  macros.rs  state.rs
