[package]
name = "code_generator"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full", "visit-mut", "extra-traits", "fold", "visit"] }
quote = "*"
proc-macro2 = "*"
proc-macro2-diagnostics = "*"
sailfish = "0.6.0"
itertools = "0.10.5"
